--- a/src/app/layout/additions/navbar/navbar.component.html
+++ b/src/app/layout/additions/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 
 <nav class="bg-white border-gray-200 dark:bg-gray-900 w-full mx-auto fixed left-0 right-0 z-50 shadow-md">
     <div class="max-w-screen-xl flex max-md:flex-wrap max-md:justify-between items-center p-4">
-      <a routerLink="home" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <a routerLink="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="./assets/images/freshcart-logo.svg" class="h-8" alt="Flowbite Logo" />
       </a>
       <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -15,7 +15,7 @@
         @if (isLogin) {
           <ul class="font-medium flex flex-col items-center p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
             <li>
-              <a routerLink="home" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
+              <a routerLink="/home" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
                 {{"Home" | translate}}
               </a>
             </li>
@@ -27,17 +27,17 @@
             </li>
   
             <li>
-              <a routerLink="products" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
+              <a routerLink="/products" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
                 {{"Products" | translate}}
               </a>
             </li>
             <li>
-              <a routerLink="categories" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
+              <a routerLink="/categories" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
                 {{"Categories" | translate}}
               </a>
             </li>
             <li>
-              <a routerLink="brands" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
+              <a routerLink="/brands" routerLinkActive="font-bold text-main" class="block py-2 px-3 text-gray-500  md:p-0 dark:text-white" aria-current="page">
                 {{"Brands" | translate}}
               </a>
             </li>
@@ -74,7 +74,7 @@
         
             @if(!isLogin){
               <li>
-                <a routerLink="login" routerLinkActive="font-bold text-main" class="cursor-pointer text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3  py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" aria-current="page">
+                <a routerLink="/login" routerLinkActive="font-bold text-main" class="cursor-pointer text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3  py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" aria-current="page">
                   {{"Login" | translate}}
                 </a>
     
@@ -84,7 +84,7 @@
            
            
             <li>
-                <a routerLink="register" routerLinkActive="font-bold text-main" class=" cursor-pointer text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" aria-current="page">
+                <a routerLink="/register" routerLinkActive="font-bold text-main" class=" cursor-pointer text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" aria-current="page">
                   {{"Register" | translate}}
                 </a>
     
