Updated navbar and fixed paths

--- a/src/app/layout/pages/register/register.component.html
+++ b/src/app/layout/pages/register/register.component.html
@@ -182,6 +182,11 @@
         }
 
       </button>
+      <span class="mx-4 text-gray-700">or</span>
+      <a routerLink="/login" routerLinkActive="font-bold" class="cursor-pointer btn-main" aria-current="page">
+        Login
+      </a>
     </form>
+    
   </div>
   
